--- a/pres.qmd
+++ b/pres.qmd
@@ -3,8 +3,14 @@ title: "Posters"
 format: html
 ---
 
-## Decorrelation Detection in Financial Time Series Data
+### Reducing Publication in Meta Analyses by Excluding Low-Powered Studies
+
+-   Society for Research Synthesis Methodology Poster Session (July 2025, Madison, WI).
+
+### [Decorrelation Detection in Financial Time Series Data](https://www.wheaton.edu/academics/natural-sciences/summer-research-program/poster-session-awardees/2021/)
 
 -   3rd Place Award, Wheaton College 2021 Summer Research Poster Session (October 2021, Wheaton, IL).
 
 -   Joint Math Meetings 2022 Pi Mu Epsilon Undergraduate Poster Session (April 2022, Virtual).
+
+![Wheaton College 2021 Summer Research Poster Session](images/poster01.jpg)
