--- a/pres.qmd
+++ b/pres.qmd
@@ -3,6 +3,10 @@ title: "Posters"
 format: html
 ---
 
+### Reducing Publication Bias in Meta-Analyses by Excluding Low-Powered Studies
+
+-   Society for Research Synthesis Methods Meeting 2025 Poster Session (July 2025, Madison, WI).
+
 ### [Decorrelation Detection in Financial Time Series Data](https://www.wheaton.edu/academics/natural-sciences/summer-research-program/poster-session-awardees/2021/)
 
 -   *3rd Place Award*, Wheaton College 2021 Summer Research Poster Session (October 2021, Wheaton, IL).
