--- a/index.qmd
+++ b/index.qmd
@@ -24,7 +24,7 @@ I am a PhD candidate currently working on projects in Experimental Design and Me
 **Ph.D. in Statistics and Data Science**  
 Northwestern University | Anticipated June 2027
 
-**B.S. in Mathematics & B.S. in Sociology**  
+**B.S. in Mathematics & B.A. in Sociology**  
 Wheaton College | Aug 2018 - May 2022  
 
 ### Roles
