looking for internships

--- a/index.qmd
+++ b/index.qmd
@@ -17,7 +17,7 @@ about:
 ---
 
 :::: {#hero-heading}
-I am a PhD candidate currently working on projects in Experimental Design and Meta Analysis. My career aspiration is to advance social justice by promoting equitable research methods and fair interpretations of quantitative data.
+I am a PhD candidate currently working on projects in Experimental Design and Meta Analysis. My career aspiration is to advance social justice by promoting equitable research methods and fair interpretations of quantitative data. I am currently looking for Summer 2026 internship opportunities.
 
 ### Education
 
