--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,10 @@
 ---
 title: "Gracie Hayes"
 about:
+  id: hero-heading
   template: trestles
+  image-width: 10em
+  image-shape: round
   image: images/headshot_04_2024_square.jpg
   links:
     - icon: linkedin
@@ -30,6 +33,8 @@ Northwestern University \| March 2024
 **B.S. in Mathematics & B.A. in Sociology**\
 Wheaton College \| May 2022
 
+::::
+
 ### Roles
 
 <div>
@@ -48,4 +53,3 @@ Northwestern University | Sep 2023 - Present
 IES Summer Research Training Institute on Cluster-Randomized Trials | Summers 2023 - 2025
 
 </div>
-::::
